@@ -43,6 +43,7 @@ HEADER = r'''%% Generated by Sphinx.
 \usepackage{sphinx}
 \usepackage{multirow}
 %(usepackages)s
+%(numfig_format)s
 %(preamble)s
 
 \title{%(title)s}
@@ -155,6 +156,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         'fncychap':        '\\usepackage[Bjarne]{fncychap}',
         'longtable':       '\\usepackage{longtable}',
         'usepackages':     '',
+        'numfig_format':   '',
         'preamble':        '',
         'title':           '',
         'date':            '',
@@ -249,6 +251,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         if self.elements['extraclassoptions']:
             self.elements['classoptions'] += ',' + \
                                              self.elements['extraclassoptions']
+        self.elements['numfig_format'] = self.generate_numfig_format()
 
         self.highlighter = highlighting.PygmentsBridge('latex',
             builder.config.pygments_style, builder.config.trim_doctest_flags)
@@ -322,6 +325,39 @@ class LaTeXTranslator(nodes.NodeVisitor):
         return text_type(id).translate(tex_replace_map).\
             encode('ascii', 'backslashreplace').decode('ascii').\
             replace('\\', '_')
+
+    def generate_numfig_format(self):
+        ret = []
+
+        figure = self.builder.config.numfig_format['figure'].split('%s', 1)
+        if len(figure) == 1:
+            ret.append(r'\def\fnum@figure{%s}' % figure[0])
+        else:
+            ret.append(r'\renewcommand{\figurename}{%s}' % figure[0])
+            if figure[1]:
+                ret.append(r'\makeatletter')
+                ret.append(r'\def\fnum@figure{\figurename\thefigure%s}' % figure[1])
+                ret.append(r'\makeatother')
+
+        table = self.builder.config.numfig_format['table'].split('%s', 1)
+        if len(table) == 1:
+            ret.append(r'\def\fnum@table{%s}' % table[0])
+        else:
+            ret.append(r'\renewcommand{\tablename}{%s}' % table[0])
+            if table[1]:
+                ret.append(r'\makeatletter')
+                ret.append(r'\def\fnum@table{\tablename\thetable%s}' % table[1])
+                ret.append(r'\makeatother')
+
+        code = self.builder.config.numfig_format['code-block'].split('%s', 1)
+        if len(code) == 1:
+            pass  # FIXME
+        else:
+            ret.append(r'\floatname{literal-block}{%s}' % code[0])
+            if table[1]:
+                pass  # FIXME
+
+        return '\n'.join(ret)
 
     def generate_indices(self):
         def generate(content, collapsed):
