@@ -166,6 +166,55 @@ def test_numref(app, status, warning):
     print(result)
     print(status.getvalue())
     print(warning.getvalue())
+    assert '\\renewcommand{\\figurename}{Fig. }' in result
+    assert '\\renewcommand{\\tablename}{Table }' in result
+    assert '\\floatname{literal-block}{Listing }' in result
+    assert '\\ref{index:fig1}' in result
+    assert '\\ref{baz:fig22}' in result
+    assert '\\ref{index:table-1}' in result
+    assert '\\ref{baz:table22}' in result
+    assert '\\ref{index:code-1}' in result
+    assert '\\ref{baz:code22}' in result
+
+
+@with_app(buildername='latex', testroot='numfig',
+          confoverrides={'numfig': True,
+                         'numfig_format': {'figure': 'Figure:%s',
+                                           'table': 'Tab_%s',
+                                           'code-block': 'Code-%s'}})
+def test_numref_with_prefix1(app, status, warning):
+    app.builder.build_all()
+    result = (app.outdir / 'Python.tex').text(encoding='utf8')
+    print(result)
+    print(status.getvalue())
+    print(warning.getvalue())
+    assert '\\renewcommand{\\figurename}{Figure:}' in result
+    assert '\\renewcommand{\\tablename}{Tab_}' in result
+    assert '\\floatname{literal-block}{Code-}' in result
+    assert '\\ref{index:fig1}' in result
+    assert '\\ref{baz:fig22}' in result
+    assert '\\ref{index:table-1}' in result
+    assert '\\ref{baz:table22}' in result
+    assert '\\ref{index:code-1}' in result
+    assert '\\ref{baz:code22}' in result
+
+
+@with_app(buildername='latex', testroot='numfig',
+          confoverrides={'numfig': True,
+                         'numfig_format': {'figure': 'Figure:%s.',
+                                           'table': 'Tab_%s:',
+                                           'code-block': 'Code-%s | '}})
+def test_numref_with_prefix2(app, status, warning):
+    app.builder.build_all()
+    result = (app.outdir / 'Python.tex').text(encoding='utf8')
+    print(result)
+    print(status.getvalue())
+    print(warning.getvalue())
+    assert '\\renewcommand{\\figurename}{Figure:}' in result
+    assert '\\def\\fnum@figure{\\figurename\\thefigure.}' in result
+    assert '\\renewcommand{\\tablename}{Tab_}' in result
+    assert '\\def\\fnum@table{\\tablename\\thetable:}' in result
+    assert '\\floatname{literal-block}{Code-}' in result
     assert '\\ref{index:fig1}' in result
     assert '\\ref{baz:fig22}' in result
     assert '\\ref{index:table-1}' in result
